--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,12 @@
 main {
     width: 350px;
-    margin: 5% auto;
-    border-radius:20px;
+    margin: 8.5% auto;
+    border-radius: 15px;
     background-color: hsl(216, 50%, 16%);
     box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    box-shadow: hsl(217, 54%, 10%) 0px 25px 9px 15px;
 }
 
 .imagem-principal {
@@ -35,25 +38,31 @@ main {
     line-height: 1.2;    
 }
 
-.valor-em-eth {
+.valor-em-eth .info-eth {
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
 .valor-em-eth img {
-    padding: 20px;
+    padding: 0 7px 0 18px;
 }
 
 .valor-em-eth h2 {
     color: hsl(178, 100%, 50%);
     font-size: 18px;
     font-weight: 400;
+    padding-right: 85px;
+}
+
+span {
+    font-size: 16px;
+    font-weight: 300;
+    color: hsl(215, 51%, 70%);
 }
 
 hr {
     width: 85%;
-    margin: 20px;
+    margin: 25px 20px 18px 20px;
     border-color: hsl(215, 51%, 70%);
 }
 
@@ -61,24 +70,25 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 30px;
+    padding-bottom: 35px;
 }
 
 .assinatura img {
-    width: 40px;
+    width: 35px;
     border-style: solid;
     border-width: 1.5px;
     border-radius: 100%;
     border-color: hsl(0, 0%, 100%);
     justify-content: center;
     align-items: center;
-    margin: 0 20px;
+    margin: 0 15px 0 22px;
 }
 
 .assinatura p {
     padding: 0;
     justify-content: center;
     align-items: center;
+    font-size: 16px;
 }
 
 .assinatura strong {
