--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,32 +1,84 @@
 main {
-    width: 350px;
-    margin: 8.5% auto;
-    border-radius: 15px;
+    width: 340px;
+    margin: 12.5vh auto;
+    border-radius: 12.5px;
+    display: flex;
     background-color: hsl(216, 50%, 16%);
     box-sizing: border-box;
     align-items: center;
     justify-content: center;
-    box-shadow: hsl(217, 54%, 10%) 0px 25px 9px 15px;
+    box-shadow: hsl(217, 58%, 9.5%) 0px 25px 4px 15px, hsl(217, 56%, 10.7%) 0px 30px 3px 45px ;
 }
 
-.imagem-principal {
+.imagens {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.imagem-principal img {
+.imagem-principal {
     width: 90%;
     margin-top: 20px;
     border-radius: 10px;
+    position: relative;
+}
+
+.imagem-principal img {
+    width: 100%;
+    height: 306px;
+    border-radius: 10px;
+}
+
+.vizualizacao {
+    position: absolute;
+    width: 306px;
+    height: 306px;
+    margin-top: 18px;
+    opacity: 0;
+    border-radius: 10px;
+    transition: 0.15s;
+    cursor: pointer;
+}
+
+.vizualizacao:hover {
+    opacity: 1;
+}
+
+.vizualizacao .fundo {
+    opacity: 0.4;
+    background-color: hsl(178, 100%, 50%);
+    width: 306px;
+    height: 306px;
+    border-radius: 10px;
+    position: absolute;
+}
+
+.vizualizacao .icone-olho {
+    opacity: 1;
+    width: 306px;
+    height: 306px;
+    border-radius: 10px;
+}
+
+.vizualizacao .icone-olho img {
+    position: absolute;
+    margin: 128px;
+    width: 50px;
+    height: 50px;
 }
 
 .descricao-da-moeda h1 {
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 600;
-    width: 90%;
-    padding: 20px;
+    width: 200px;
     color: hsl(0, 0%, 100%);
+    cursor: pointer;
+    margin: 20px;
+    transition: 0.15s;
+}
+
+.descricao-da-moeda h1:hover {
+    color: hsl(178, 100%, 50%)
 }
 
 .conteudo p {
@@ -38,20 +90,20 @@ main {
     line-height: 1.2;    
 }
 
-.valor-em-eth .info-eth {
+.info-eth {
     display: flex;
     align-items: center;
 }
 
 .valor-em-eth img {
-    padding: 0 7px 0 18px;
+    padding: 0 7px 0 20px;
 }
 
 .valor-em-eth h2 {
     color: hsl(178, 100%, 50%);
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 400;
-    padding-right: 85px;
+    padding-right: 80px;
 }
 
 span {
@@ -62,7 +114,7 @@ span {
 
 hr {
     width: 85%;
-    margin: 25px 20px 18px 20px;
+    margin: 25px 10px 15px 20px;
     border-color: hsl(215, 51%, 70%);
 }
 
@@ -70,7 +122,7 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 35px;
+    padding-bottom: 30px;
 }
 
 .assinatura img {
@@ -94,4 +146,10 @@ hr {
 .assinatura strong {
     color: hsl(0, 0%, 100%);
     font-weight: 300;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.assinatura strong:hover {
+    color: hsl(178, 100%, 50%);
 }
